Add basic game board

--- a/index.html
+++ b/index.html
@@ -5,8 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic-Tac-Toe</title>
+    <link rel="stylesheet" href="style.css"></link>
+    <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <header class="top-banner">
+        <h1>Tic-Tac-Toe</h1>
+    </header>
+    <div class="game-container">
+        <div class="current-player">
+            Player X's turn
+        </div>
+        <div id="board-container">
+
+        </div>
+        <button class="restart">Restart</button>
+    </div>
 </body>
 </html>
