--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div id="board-container">
 
         </div>
-        <button class="restart">Restart</button>
+        <button id="restart-btn">Restart</button>
     </div>
 </body>
 </html>
