--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Tic-Tac-Toe</h1>
     </header>
     <div class="game-container">
-        <div class="current-player" id="current-player">
+        <div id="current-player">
             
         </div>
         <div id="board-container">
